# CodeRoughcollie

./: .gitignore  .gitmodules  .roughcollie.toml.example  AGENTS.md  Cargo.toml  README.md  {
.github/: dogfood.roughcollie.toml
.github/workflows/: ci.yml  dogfood.yml  release.yml
crates/cr-audit-complexity/: Cargo.toml
crates/cr-audit-complexity/src/: lib.rs
crates/cr-audit-explain/: Cargo.toml
crates/cr-audit-explain/src/: lib.rs
crates/cr-audit-impact/: Cargo.toml
crates/cr-audit-impact/src/: lib.rs
crates/cr-audit-static/: Cargo.toml  build.rs
crates/cr-audit-static/src/: astgrep_embed.rs  astgrep_runner.rs  diff_aware.rs  file_type.rs  java_security.rs  lib.rs  rewrite.rs  rule_metadata.rs  sql_antipattern.rs  validation.rs
crates/cr-audit-static/tests/: astgrep_runner_integration.rs
crates/cr-cli/: Cargo.toml
crates/cr-cli/src/: doctor.rs  main.rs  manifest.rs
crates/cr-config/: Cargo.toml
crates/cr-config/src/: lib.rs  manifest.rs
crates/cr-core/: Cargo.toml
crates/cr-core/src/: baseline.rs  compliance.rs  dedup.rs  engine.rs  error.rs  filter.rs  lib.rs  scoring.rs  traits.rs  types.rs
crates/cr-db/: Cargo.toml
crates/cr-db/src/: connection.rs  explain_executor.rs  lib.rs  multi_db.rs  placeholder.rs  pool.rs  security.rs
crates/cr-git/: Cargo.toml
crates/cr-git/src/: lib.rs
crates/cr-mcp-server/: Cargo.toml
crates/cr-mcp-server/src/: lib.rs  server.rs  types.rs
crates/cr-plugin/: Cargo.toml
crates/cr-plugin/src/: abi.rs  lib.rs  loader.rs  registry.rs
crates/cr-report/: Cargo.toml
crates/cr-report/src/: lib.rs
crates/cr-server/: Cargo.toml
crates/cr-server/src/: api.rs  db.rs  lib.rs  notify.rs  types.rs
docs/: Design.md  Ref-LanceDB.md  UserGuide.md
docs/plans/: 2025-06-18-phase1-skeleton.md  2026-06-22-multi-project-config-design.md  2026-06-22-project-config-enhancement-design.md
testcases/: c2j_ogagila.toml
