[package]
name = "cr-audit-complexity"
description = "复杂度评估：复用 ogsql-complexity 评分"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cr-core = { workspace = true }
ogsql-complexity = { workspace = true }

[lints]
workspace = true
