[package]
name = "cr-audit-impact"
description = "语义影响分析：集成 codeweb 查询调用链（三期）"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cr-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wait-timeout = "0.2"
tempfile = { workspace = true }

[lints]
workspace = true
