[package]
name = "cr-git"
description = "Git diff 解析、baseline 对比、blame"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
ignore = "0.4"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
