[package]
name = "cr-plugin"
description = "插件加载层：C ABI 封装 + 动态库加载 + 版本协商（三期）"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cr-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libloading = "0.8"
libc = "0.2"

[lints]
workspace = true
