[package]
name = "cr-server"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cr-core = { workspace = true }
cr-audit-static = { workspace = true }
cr-report = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["net"] }
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints]
workspace = true
